@@ -10,6 +10,8 @@ public:
 	virtual bool	OnMessage(CGUIMessage& message);
 	virtual void	OnAction(const CAction &action);
 	virtual void	Render();
+protected:
+	int							m_iLastControl;
 //private:
 //	int	m_iOffsetX;
 //	int m_iOffsetY;
